...
        android:background="@drawable/hints_background"
        android:visibility="@{viewModel.isHintBulbVisible() ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
          android:id="@+id/dot_hint"
          android:layout_width="8dp"
          android:layout_height="6dp"
          android:layout_gravity="top|end"
          android:layout_margin="8dp"
          android:contentDescription="@string/question_player_activity_new_hint_available_text"
          android:visibility="@{viewModel.isHintOpenedAndUnRevealed() ? View.VISIBLE : View.GONE}"
          app:srcCompat="@drawable/ic_dot_yellow_24dp" />

        <ImageView
          android:id="@+id/hint_bulb"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="12dp"
          android:contentDescription="@string/state_fragment_open_hint_content_description"
          app:srcCompat="@drawable/ic_hint_bulb_white_24dp" />
      </FrameLayout>
...
    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom">

      <TextView
        android:id="@+id/congratulations_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
...
        android:textAllCaps="true"
        android:textColor="@color/component_color_shared_correct_text_color"
        android:textSize="20sp"
        android:visibility="invisible" />

      <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/congratulations_text_confetti_view"
        android:layout_width="match_parent"
        android:layout_height="124dp" />
    </FrameLayout>
  </FrameLayout>
</layout>

