...
    app:questionViewMarginBottom="@{@dimen/space_0dp}"
    app:questionViewMarginEnd="@{@dimen/general_button_item_question_view_margin_end}"
    app:questionViewMarginStart="@{@dimen/general_button_item_question_view_margin_start}"
    app:questionViewMarginTop="@{@dimen/general_button_item_margin_top}">

    <ImageButton
      android:id="@+id/previous_state_navigation_button"
      style="@style/PreviousButton"
      android:elevation="2dp"
      android:onClick="@{(v) -> buttonViewModel.previousNavigationButtonListener.onPreviousButtonClicked()}"
      android:visibility="@{buttonViewModel.hasPreviousButton ? View.VISIBLE: View.GONE, default=gone}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/component_color_shared_back_forward_arrow_button_color"
      android:contentDescription="@string/state_fragment_previous_navigation_button_description" />

    <org.oppia.android.app.customview.ContinueButtonView
      android:id="@+id/continue_navigation_button"
      style="@style/StateButtonActive"
      android:layout_width="wrap_content"
      android:gravity="center_vertical"
      android:onClick="@{(v) -> buttonViewModel.continueNavigationButtonListener.onContinueButtonClicked()}"
      android:text="@string/state_fragment_continue_button_text"
      app:continueButtonAnimationTimestampMs="@{buttonViewModel.continueButtonAnimationTimestampMs}"
...
