...
    <FrameLayout
      android:id="@+id/exploration_fragment_placeholder"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

    <Button
      android:id="@+id/play_test_exploration_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/exploration_activity_play_button_text"
      android:textAllCaps="false"
      android:visibility="@{viewModel.hasExplorationStarted ? View.GONE : View.VISIBLE}" />
...
