...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hints_and_solution_app_bar_layout">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hints_and_solution_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="@dimen/hints_and_solution_recycler_view_padding_top"
        android:paddingBottom="@dimen/hints_and_solution_recycler_view_padding_bottom"
...
