package org.oppia.android.app.player.state

import android.app.Application
import android.content.Context
import android.view.View
import android.view.ViewGroup
import androidx.annotation.IdRes
import androidx.appcompat.app.AppCompatActivity
import androidx.core.view.children
import androidx.fragment.app.DialogFragment
import androidx.recyclerview.widget.RecyclerView.ViewHolder
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.PerformException
import androidx.test.espresso.ViewAction
import androidx.test.espresso.ViewAssertion
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.scrollToHolder
import androidx.test.espresso.contrib.RecyclerViewActions.scrollToPosition
import androidx.test.espresso.matcher.RootMatchers.isDialog
import androidx.test.espresso.matcher.ViewMatchers.isCompletelyDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.isRoot
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withSubstring
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.bumptech.glide.Glide
import com.bumptech.glide.GlideBuilder
import com.bumptech.glide.load.engine.executor.MockGlideExecutor
import com.google.common.truth.Truth.assertThat
import dagger.Component
import kotlinx.coroutines.CoroutineDispatcher
import org.hamcrest.BaseMatcher
import org.hamcrest.CoreMatchers.allOf
import org.hamcrest.CoreMatchers.not
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.TypeSafeMatcher
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.oppia.android.R
import org.oppia.android.app.activity.ActivityComponent
import org.oppia.android.app.application.ActivityComponentFactory
import org.oppia.android.app.application.ApplicationComponent
import org.oppia.android.app.application.ApplicationContext
import org.oppia.android.app.application.ApplicationInjector
import org.oppia.android.app.application.ApplicationInjectorProvider
import org.oppia.android.app.application.ApplicationModule
import org.oppia.android.app.application.ApplicationStartupListenerModule
import org.oppia.android.app.hintsandsolution.TAG_REVEAL_SOLUTION_DIALOG
import org.oppia.android.app.player.exploration.TAG_HINTS_AND_SOLUTION_DIALOG
import org.oppia.android.app.player.state.hintsandsolution.HintsAndSolutionConfigModule
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.CONTINUE_INTERACTION
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.CONTINUE_NAVIGATION_BUTTON
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.FRACTION_INPUT_INTERACTION
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.NEXT_NAVIGATION_BUTTON
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.PREVIOUS_RESPONSES_HEADER
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.SELECTION_INTERACTION
import org.oppia.android.app.player.state.itemviewmodel.StateItemViewModel.ViewType.SUBMIT_ANSWER_BUTTON
import org.oppia.android.app.player.state.testing.StateFragmentTestActivity
import org.oppia.android.app.recyclerview.RecyclerViewMatcher
import org.oppia.android.app.shim.ViewBindingShimModule
import org.oppia.android.app.utility.OrientationChangeAction.Companion.orientationLandscape
import org.oppia.android.app.utility.OrientationChangeAction.Companion.orientationPortrait
import org.oppia.android.domain.classify.InteractionsModule
import org.oppia.android.domain.classify.rules.continueinteraction.ContinueModule
import org.oppia.android.domain.classify.rules.dragAndDropSortInput.DragDropSortInputModule
import org.oppia.android.domain.classify.rules.fractioninput.FractionInputModule
import org.oppia.android.domain.classify.rules.imageClickInput.ImageClickInputModule
import org.oppia.android.domain.classify.rules.itemselectioninput.ItemSelectionInputModule
import org.oppia.android.domain.classify.rules.multiplechoiceinput.MultipleChoiceInputModule
import org.oppia.android.domain.classify.rules.numberwithunits.NumberWithUnitsRuleModule
import org.oppia.android.domain.classify.rules.numericinput.NumericInputRuleModule
import org.oppia.android.domain.classify.rules.ratioinput.RatioInputModule
import org.oppia.android.domain.classify.rules.textinput.TextInputRuleModule
import org.oppia.android.domain.onboarding.ExpirationMetaDataRetrieverModule
import org.oppia.android.domain.oppialogger.LogStorageModule
import org.oppia.android.domain.oppialogger.loguploader.LogUploadWorkerModule
import org.oppia.android.domain.oppialogger.loguploader.WorkManagerConfigurationModule
import org.oppia.android.domain.question.QuestionModule
import org.oppia.android.domain.topic.FRACTIONS_EXPLORATION_ID_1
import org.oppia.android.domain.topic.PrimeTopicAssetsControllerModule
import org.oppia.android.domain.topic.TEST_STORY_ID_0
import org.oppia.android.domain.topic.TEST_TOPIC_ID_0
import org.oppia.android.testing.CoroutineExecutorService
import org.oppia.android.testing.EditTextInputAction
import org.oppia.android.testing.KonfettiViewMatcher.Companion.hasActiveConfetti
import org.oppia.android.testing.KonfettiViewMatcher.Companion.hasExpectedNumberOfActiveSystems
import org.oppia.android.testing.RobolectricModule
import org.oppia.android.testing.RunOn
import org.oppia.android.testing.TestCoroutineDispatchers
import org.oppia.android.testing.TestDispatcherModule
import org.oppia.android.testing.TestLogReportingModule
import org.oppia.android.testing.TestPlatform
import org.oppia.android.testing.profile.ProfileTestHelper
import org.oppia.android.testing.time.FakeOppiaClockModule
import org.oppia.android.util.accessibility.AccessibilityTestModule
import org.oppia.android.util.caching.testing.CachingTestModule
import org.oppia.android.util.gcsresource.GcsResourceModule
import org.oppia.android.util.logging.LoggerModule
import org.oppia.android.util.logging.firebase.FirebaseLogUploaderModule
import org.oppia.android.util.parser.GlideImageLoaderModule
import org.oppia.android.util.parser.HtmlParserEntityTypeModule
import org.oppia.android.util.parser.ImageParsingModule
import org.oppia.android.util.threading.BackgroundDispatcher
import org.robolectric.annotation.Config
import org.robolectric.annotation.LooperMode
import org.robolectric.shadows.ShadowMediaPlayer
import org.robolectric.shadows.util.DataSource
import java.io.IOException
import java.util.concurrent.TimeUnit
import javax.inject.Inject
import javax.inject.Singleton

/**
 * Tests for [StateFragment] that can only be run locally, e.g. using Robolectric, and not on an
 * emulator.
 */
@RunWith(AndroidJUnit4::class)
@LooperMode(LooperMode.Mode.PAUSED)
@Config(application = StateFragmentLocalTest.TestApplication::class, qualifiers = "port-xxhdpi")
@RunOn(TestPlatform.ROBOLECTRIC)
class StateFragmentLocalTest {
  private val AUDIO_URL_1 =
    createAudioUrl(explorationId = "MjZzEVOG47_1", audioFileName = "content-en-ouqm7j21vt8.mp3")
  private val audioDataSource1 = DataSource.toDataSource(AUDIO_URL_1, /* headers= */ null)

  @Inject
  lateinit var profileTestHelper: ProfileTestHelper

  @Inject
  lateinit var testCoroutineDispatchers: TestCoroutineDispatchers

  @Inject
  @field:ApplicationContext
  lateinit var context: Context

  @Inject
  @field:BackgroundDispatcher
  lateinit var backgroundCoroutineDispatcher: CoroutineDispatcher

  @Inject
  lateinit var editTextInputAction: EditTextInputAction

  private val internalProfileId: Int = 1
  private val solutionIndex: Int = 4

  @Before
  fun setUp() {
    setUpTestApplicationComponent()

    // Initialize Glide such that all of its executors use the same shared dispatcher pool as the
    // rest of Oppia so that thread execution can be synchronized via Oppia's test coroutine
    // dispatchers.
    val executorService = MockGlideExecutor.newTestExecutor(
      CoroutineExecutorService(backgroundCoroutineDispatcher)
    )
    Glide.init(
      context,
      GlideBuilder().setDiskCacheExecutor(executorService)
        .setAnimationExecutor(executorService)
        .setSourceExecutor(executorService)
    )

    profileTestHelper.initializeProfiles()
    ShadowMediaPlayer.addException(audioDataSource1, IOException("Test does not have networking"))
  }

  @After
  fun tearDown() {
    // Ensure lingering tasks are completed (otherwise Glide can enter a permanently broken state
    // during initialization for the next test).
    testCoroutineDispatchers.advanceUntilIdle()
  }

  @Test
  fun testStateFragment_loadExploration_explorationLoads() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()

      // Due to the exploration activity loading, the play button should no longer be visible.
      onView(withId(R.id.play_test_exploration_button)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_advanceToNextState_loadsSecondState() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()

      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(SELECTION_INTERACTION))
      onView(withSubstring("the pieces must be the same size.")).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(CONTINUE_NAVIGATION_BUTTON))
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.continue_navigation_button)).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(withSubstring("of the above circle is red?")).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_advanceToNextState_hintNotAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()

      playThroughState1()

      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_wait10seconds_noHintAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(10))

      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_wait30seconds_noHintAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(30))

      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_wait60seconds_hintIsAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(60))

      onView(withId(R.id.hint_bulb)).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_nextState_wait60seconds_canViewOneHint() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(60))
      openHintsAndSolutionsDialog()

      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_nextState_wait120seconds_canViewOneHint() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(120))
      openHintsAndSolutionsDialog()

      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
    }
  }

  @Test
  @Config(qualifiers = "+port")
  fun testStateFragment_portrait_submitCorrectAnswer_correctTextBannerIsDisplayed() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      onView(withId(R.id.congratulations_text_view))
        .check(matches(isCompletelyDisplayed()))
    }
  }

  @Test
  @Config(qualifiers = "+land")
  fun testStateFragment_landscape_submitCorrectAnswer_correctTextBannerIsDisplayed() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      onView(withId(R.id.congratulations_text_view))
        .check(matches(isCompletelyDisplayed()))
    }
  }

  @Test
  @Config(qualifiers = "+port")
  fun testStateFragment_portrait_submitCorrectAnswer_confettiIsActive() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      onView(withId(R.id.congratulations_text_confetti_view)).check(matches(hasActiveConfetti()))
    }
  }

  @Test
  @Config(qualifiers = "+land")
  fun testStateFragment_landscape_submitCorrectAnswer_confettiIsActive() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      onView(withId(R.id.congratulations_text_confetti_view)).check(matches(hasActiveConfetti()))
    }
  }

  @Test
  fun testStateFragment_nextState_wait60seconds_submitTwoWrongAnswers_canViewOneHint() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(60))
      submitTwoWrongAnswers()
      openHintsAndSolutionsDialog()

      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_submitTwoWrongAnswers_checkPreviousHeaderVisible() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitTwoWrongAnswers()
      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(PREVIOUS_RESPONSES_HEADER))
      testCoroutineDispatchers.runCurrent()

      onView(withId(R.id.previous_response_header)).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_submitTwoWrongAnswers_checkPreviousHeaderCollapsed() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitTwoWrongAnswers()
      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(PREVIOUS_RESPONSES_HEADER))
      testCoroutineDispatchers.runCurrent()

      // The previous response header and only the last failed answer should be showing (since the
      // failed answer list is collapsed).
      onView(withId(R.id.previous_response_header)).check(matches(isDisplayed()))
      onView(withId(R.id.state_recycler_view))
        .check(
          matchesChildren(matcher = withId(R.id.submitted_answer_container), times = 1)
        )
    }
  }

  @Test
  fun testStateFragment_submitTwoWrongAnswers_expandResponse_checkPreviousHeaderExpanded() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitTwoWrongAnswers()

      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(PREVIOUS_RESPONSES_HEADER))
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.previous_response_header)).perform(click())
      testCoroutineDispatchers.runCurrent()

      // Both failed answers should be showing.
      onView(withId(R.id.state_recycler_view))
        .check(
          matchesChildren(matcher = withId(R.id.submitted_answer_container), times = 2)
        )
    }
  }

  @Test
  fun testStateFragment_expandCollapseResponse_checkPreviousHeaderCollapsed() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitTwoWrongAnswers()

      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(PREVIOUS_RESPONSES_HEADER))
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.previous_response_header)).check(matches(isDisplayed()))
      // Only the latest failed answer should be showing.
      onView(withId(R.id.state_recycler_view))
        .check(
          matchesChildren(matcher = withId(R.id.submitted_answer_container), times = 1)
        )
      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(PREVIOUS_RESPONSES_HEADER))
      testCoroutineDispatchers.runCurrent()
      onView(withSubstring("Previous Responses")).perform(click())
      testCoroutineDispatchers.runCurrent()
      // All failed answers should be showing.
      onView(withId(R.id.state_recycler_view))
        .check(
          matchesChildren(matcher = withId(R.id.submitted_answer_container), times = 2)
        )
      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(PREVIOUS_RESPONSES_HEADER))
      testCoroutineDispatchers.runCurrent()
      onView(withSubstring("Previous Responses")).perform(click())
      testCoroutineDispatchers.runCurrent()
      // Only the latest failed answer should now be showing.
      onView(withId(R.id.state_recycler_view))
        .check(
          matchesChildren(matcher = withId(R.id.submitted_answer_container), times = 1)
        )
    }
  }

  @Test
  fun testStateFragment_nextState_submitInitialWrongAnswer_noHintAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitWrongAnswerToState2()

      // Submitting one wrong answer isn't sufficient to show a hint.
      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_submitInitialWrongAnswer_wait10seconds_noHintAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitWrongAnswerToState2()
      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(10))

      // Submitting one wrong answer isn't sufficient to show a hint.
      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_submitInitialWrongAnswer_wait30seconds_noHintAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitWrongAnswerToState2()
      testCoroutineDispatchers.advanceTimeBy(TimeUnit.SECONDS.toMillis(30))

      // Submitting one wrong answer isn't sufficient to show a hint.
      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_submitTwoWrongAnswers_hintAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitTwoWrongAnswers()

      // Submitting two wrong answers should make the hint immediately available.
      onView(withId(R.id.hint_bulb)).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_submitTwoWrongAnswers_hintAvailable_prevState_hintNotAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()
      submitTwoWrongAnswers()
      onView(withId(R.id.hint_bulb)).check(matches(isDisplayed()))
      // The previous navigation button is next to a submit answer button in this state.
      onView(withId(R.id.state_recycler_view)).perform(scrollToViewType(SUBMIT_ANSWER_BUTTON))
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.previous_state_navigation_button)).perform(click())
      testCoroutineDispatchers.runCurrent()
      onView(withId(R.id.hint_bulb)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_submitTwoWrongAnswers_prevState_currentState_checkDotIconVisible() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()
      submitTwoWrongAnswers()
      onView(withId(R.id.dot_hint)).check(matches(isDisplayed()))
      moveToPreviousAndBackToCurrentStateWithSubmitButton()
      onView(withId(R.id.dot_hint)).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_oneUnrevealedHint_prevState_currentState_checkOneUnrevealedHintVisible() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()
      submitTwoWrongAnswers()

      openHintsAndSolutionsDialog()
      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
      onView(withText("Reveal Hint")).inRoot(isDialog()).check(matches(isDisplayed()))
      closeHintsAndSolutionsDialog()

      moveToPreviousAndBackToCurrentStateWithSubmitButton()

      openHintsAndSolutionsDialog()
      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
      onView(withText("Reveal Hint")).inRoot(isDialog()).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_revealFirstHint_prevState_currentState_checkFirstHintRevealed() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      produceAndViewFirstHint()
      moveToPreviousAndBackToCurrentStateWithSubmitButton()
      openHintsAndSolutionsDialog()
      onView(withId(R.id.hints_and_solution_recycler_view))
        .inRoot(isDialog())
        .perform(scrollToPosition<ViewHolder>(0))
      testCoroutineDispatchers.runCurrent()
      onView(
        RecyclerViewMatcher.atPositionOnView(
          R.id.hints_and_solution_recycler_view, 0, R.id.hint_summary_container
        )
      ).perform(click())
      testCoroutineDispatchers.runCurrent()

      onView(isRoot()).check(
        matches(
          not(
            withText("In a fraction, the pieces representing the denominator must be equal")
          )
        )
      )
    }
  }

  @Test
  fun testStateFragment_nextState_submitTwoWrongAnswersAndWait_canViewOneHint() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitTwoWrongAnswers()
      openHintsAndSolutionsDialog()

      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
    }
  }

  @Test
  fun testStateFragment_nextState_submitThreeWrongAnswers_canViewOneHint() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()

      submitThreeWrongAnswersAndWait()
      openHintsAndSolutionsDialog()

      onView(withText("Hint 1")).inRoot(isDialog()).check(matches(isDisplayed()))
      onView(isRoot()).check(matches(not(withText("Hint 2"))))
    }
  }

  @Test
  fun testStateFragment_nextState_viewHint_newHintIsNoLongerAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()
      submitTwoWrongAnswersAndWait()
      openHintsAndSolutionsDialog()

      pressRevealHintButton(hintPosition = 0)
      closeHintsAndSolutionsDialog()

      onView(withId(R.id.hint_bulb)).check(matches(isDisplayed()))
      onView(withId(R.id.dot_hint)).check(matches(not(isDisplayed())))
    }
  }

  @Test
  fun testStateFragment_nextState_viewHint_wait10seconds_noNewHintIsAvailable() {
    launchForExploration(FRACTIONS_EXPLORATION_ID_1).use {
      startPlayingExploration()
      playThroughState1()
      produceAndViewFirstHint()

